AV2 Changelog :: version a4.6

* Halved flamethrower chi drain

> Fix bug where other players can't mount their friend's bison