@@ -1,5 +1,6 @@
 AV2 Changelog :: version a4.6
 
 * Halved flamethrower chi drain
+* Can't summon flying bison if it is nearby (20 blocks)
 
 > Fix bug where other players can't mount their friend's bison
